--- a/minerals_clicker/index.html
+++ b/minerals_clicker/index.html
@@ -13,7 +13,7 @@
         <div id="info_minerais">
             <h1 id="nombre_minerais">minerais</h1>
             <h2 id="nombre_minerais_entier"></h2>
-            <h3 id="nombre_minerais_par_seconde">par seconde : je test si c bien au milieu</h3>
+            <h3 id="nombre_minerais_par_seconde">par seconde : </h3>
         </div>
         <div id="minerais_cliquable">
             <a id="click_minerais" href="#"><img draggable="false" src="./assets/img/charbon.png" alt="minerais de charbon"></a>
@@ -53,58 +53,5 @@
     </div>
 
 </body>
-
-<script>
-
-const minerais_img = document.querySelector('#click_minerais');
-const nb_minerais = document.querySelector('#nombre_minerais');
-const nb_minerais_entier = document.querySelector('#nombre_minerais_entier');
-const nb_minerais_seconde = document.querySelector('#nombre_minerais_par_seconde');
-const h4 = document.querySelector('h4');
-const amelioration_1 = document.querySelector('#amelioration_minerais_cliquable_1');
-const amelioration_2 = document.querySelector('#amelioration_minerais_cliquable_2');
-const bouton_refus = document.querySelector('[name="pas_assez_de_minerais"]')
-
-let minerais = 0;
-let minerais_par_clique = 1;
-let minerais_par_seconde = 0;
-
-function classNonRemove() {
-    h4.classList.remove('non');
-}
-function classNonAdd() {
-    h4.classList.add('non');
-}
-
-// minerais_img.addEventListener('click', event => {
-//     minerais = minerais + minerais_par_clique;
-//     update_html_page()
-// });
-
-// amelioration_1.addEventListener('click', event => {
-//     if(minerais >= 10){
-//         console.log("Vous avez obtenu l'amélioration");
-//         minerais_par_clique = minerais_par_clique + 1;
-//         minerais -= 10;
-//         classNonRemove();
-//         update_html_page()
-//     }else{
-//         classNonAdd();
-//     }
-// });
-
-amelioration_2.addEventListener('click', event => {
-    if(minerais >= 100){
-        minerais -= 100;
-        setInterval(function(){
-            minerais = minerais + 1;
-            update_html_page();
-        },1000)}
-    // }else{
-    //     bouton_refus.classList.add('bouton_non');
-    // }
-});
-
-</script>
 <script src="./assets/js/script.js"></script>
 </html>
