--- a/minerals_clicker/index.html
+++ b/minerals_clicker/index.html
@@ -16,7 +16,7 @@
             <h3 id="nombre_minerais_par_seconde">par seconde : </h3>
         </div>
         <div id="minerais_cliquable">
-            <a id="click_minerais" href="#"><img draggable="false" src="./assets/img/charbon.png" alt="minerais de charbon"></a>
+            <a id="click_minerais" href="#"><img draggable="false" src="./assets/img/minerais.png" alt="minerais de charbon"></a>
         </div>
     </div>
     <div id="btn_boite">
@@ -24,7 +24,7 @@
         <div class="btn_boite_interieur">
             <div id="amelioration_minerais_cliquable_1" class="btn_amelioration">
                 <a href="#">
-                    <h4 id="pioche_ameliorable">Pioche</h4>
+                    <h4 id="pioche_ameliorable">Pioche <span id="lvl_pioche"></span></h4>
                 </a>
                 <div class="cout_flex">
                     <img src="./assets/img/charbon.png" alt="minerais de charbon">
@@ -33,7 +33,7 @@
             </div>
             <div id="amelioration_minerais_cliquable_2" class="btn_amelioration">
                 <a href="#">
-                    <h4 id="mineur_ameliorable">Mineur</h4>
+                    <h4 id="mineur_ameliorable">Mineur <span id="lvl_mineur"></span></h4>
                 </a>
                 <div class="cout_flex">
                     <img src="./assets/img/charbon.png" alt="minerais de charbon">
@@ -42,7 +42,7 @@
             </div>
             <div id="amelioration_minerais_cliquable_3" class="btn_amelioration">
                 <a href="#">
-                    <h4 id="wagon_ameliorable">Wagon</h4>
+                    <h4 id="wagon_ameliorable">Wagon <span id="lvl_wagon"></span></h4>
                 </a>
                 <div class="cout_flex">
                     <img src="./assets/img/charbon.png" alt="minerais de charbon">
